Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/Z11.out
Z11.java:13:5: compiler.err.invalid.annotation.member.type
1 error
